# RPG

./: .clang-tidy  .gitignore  02_tidy_code.sh  CMakeLists.txt  ReadMe.md  ability.hpp  buff.hpp  build.sh  classes.hpp  cleric.hpp  corestats.hpp  equipment.hpp  hitpointtypes.hpp  hp.hpp  item.hpp  item_manager.hpp  levelup.hpp  main.cpp  playercharacter.hpp  pointwell.hpp  rogue.hpp  statblock.hpp  stattypes.hpp  types.hpp  warrior.hpp  wizard.hpp
